--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">Main</string>
     <string name="title_activity_login">Login</string>
     <string name="signed_in_fmt">Продолжить как: %s</string>
+    <string name="google_oauth">805994020853-vpi0g17uod2idr2ovhi08f4vbpqig08p.apps.googleusercontent.com</string>
 </resources>
